--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/d3": "^7.4.0",
+    "@types/d3-axis": "^3.0.2",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.5",
     "axios": "^1.4.0",
+    "d3": "^7.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ts-tradingview-widgets": "^1.0.14"
