--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "d3": "^7.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ts-tradingview-widgets": "^1.0.14"
+    "react-ts-tradingview-widgets": "^1.0.14",
+    "sass": "^1.62.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -26,9 +28,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
