moved to next.js13

--- a/package.json
+++ b/package.json
@@ -1,40 +1,31 @@
 {
-  "name": "crypro-screener",
+  "name": "crypto-screener-next",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "13.4.4",
     "@types/d3": "^7.4.0",
-    "@types/d3-axis": "^3.0.2",
-    "@types/d3-scale": "^4.0.3",
-    "@types/d3-selection": "^3.0.5",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.8",
+    "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
-    "d3": "^7.8.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-ts-tradingview-widgets": "^1.0.14",
+    "d3": "^7.8.5",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sass": "^1.62.1",
-    "ws": "^8.13.0"
+    "swr": "^2.1.5",
+    "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "tailwindcss": "^3.3.2"
   }
 }
