--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crypto-screener-next",
+  "name": "crypto-screener",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.4.4",
-    "@types/d3": "^7.4.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
     "next": "13.4.4",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
-    "swr": "^2.1.5",
+    "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
   }
 }
