--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "sass": "^1.62.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/d3": "^7.4.0"
   }
 }
