--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
   "name": "crypto-screener",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
+    "@react-financial-charts/axes": "^2.0.0",
+    "@react-financial-charts/scales": "^2.0.0",
+    "@react-financial-charts/series": "^2.0.0",
+    "@react-financial-charts/utils": "^2.0.1",
+    "@types/d3": "^7.4.0",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.62.1",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-financial-charts": "^2.0.1",
+    "sass": "^1.63.3"
   },
   "devDependencies": {
-    "@types/d3": "^7.4.0"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2"
   }
 }
