--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-financial-charts/axes": "^2.0.0",
-    "@react-financial-charts/scales": "^2.0.0",
-    "@react-financial-charts/series": "^2.0.0",
-    "@react-financial-charts/utils": "^2.0.1",
     "@types/d3": "^7.4.0",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-financial-charts": "^2.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-financial-charts": "1.3.2",
     "sass": "^1.63.3"
   },
   "devDependencies": {
