--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/d3": "^7.4.0",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "d3": "^7.8.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
