--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-financial-charts": "1.3.2",
+    "react-router-dom": "^6.14.0",
     "sass": "^1.63.3"
   },
   "devDependencies": {
